--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <!-- gigante está chegando -->
-      <div class="bg-gray-200 mb-10">
+      <div class="bg-gray-200 pb-10">
         <div class="pt-8 mx-10 lg:mx-40 xl:w-1/2 xl:mx-auto text-center">
           <h1 class="text-3xl xl:text-5xl font-bold text-gray-700">
             A Gigante Europeia Está Chegando ao Brasil
@@ -68,8 +68,13 @@
         >
           <!-- plano de carreira -->
           <div
-            class="flex flex-1 flex-col justify-center px-5 py-10 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
+            class="flex flex-1 flex-col justify-center p-5 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
           >
+            <img
+              class="w-32 h-32 self-center"
+              src="images/career.svg"
+              alt="carreira"
+            />
             <h2 class="text-xl font-bold text-gray-800 py-2">
               Plano de Carreira
             </h2>
@@ -80,8 +85,13 @@
           </div>
           <!-- qualidade europeia -->
           <div
-            class="flex flex-1 flex-col justify-center px-5 py-10 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
+            class="flex flex-1 flex-col justify-center p-5 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
           >
+            <img
+              class="w-32 h-32 self-center"
+              src="images/quality.svg"
+              alt="qualidade"
+            />
             <h2 class="text-xl font-bold text-gray-800 py-2">
               Qualidade Europeia
             </h2>
@@ -92,8 +102,13 @@
           </div>
           <!-- oportunidade global -->
           <div
-            class="flex flex-1 flex-col justify-center px-5 py-10 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
+            class="flex flex-1 flex-col justify-center p-5 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
           >
+            <img
+              class="w-32 h-32 self-center"
+              src="images/oportunidade.svg"
+              alt="oportunidade"
+            />
             <h2 class="text-xl font-bold text-gray-800 py-2">
               Oportunidade Global
             </h2>
