--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sueunir - Consultora Farmasi</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body class="p-0">
     <div class="w-full">
       <picture class="flex justify-center h-20 mt-5 mb-3">
         <!-- <source media="(max-width: 600px)" srcset="images/microsoft.png" /> -->
         <img src="images/logo.png" alt="logo" />
       </picture>
       <!-- saiba mais -->
-      <div class="bg-[#fe5b68] pb-8">
+      <div class="bg-[#fe5b68] px-4 pb-8">
         <div class="flex flex-col lg:mx-48 text-center text-gray-50">
           <p class="text-2xl md:text-3xl italic mt-6">
             Pré-Lançamento da <span class="font-bold">Farmasi Brasil</span>
           </p>
-          <p class="text-3xl md:text-4xl md:mx-4 my-5">
+          <p class="text-2xl md:text-4xl md:mx-4 my-5">
             Comece Hoje uma mudança em seu Bem-Estar com a
             <span class="font-bold">Farmasi</span>
           </p>
-          <p class="text-4xl md:text-5xl font-extrabold">
+          <p class="text-3xl tracking-wide md:text-5xl font-extrabold">
             Sua Nova Vida Começa Agora!
           </p>
           <p
@@ -32,7 +32,7 @@
             tempo parcial e sem risco, dentro da nossa equipe e com toda
             mentoria e suporte!
           </p>
-          <picture class="flex justify-center">
+          <picture class="md:flex justify-center hidden">
             <img
               class="w-96 h-96"
               src="images/farmasi-brasil.jpeg"
@@ -50,11 +50,11 @@
       </div>
       <!-- gigante está chegando -->
       <div class="bg-gray-200 pb-10">
-        <div class="pt-8 mx-10 lg:mx-40 xl:w-1/2 xl:mx-auto text-center">
+        <div class="pt-8 mx-10 lg:mx-36 xl:w-1/2 xl:mx-auto text-center">
           <h1 class="text-3xl xl:text-5xl font-bold text-gray-700">
             A Gigante Europeia Está Chegando ao Brasil
           </h1>
-          <p class="text-gray-500 font-semibold p-3 my-1 tracking-wide">
+          <p class="text-md text-gray-500 font-semibold p-0 my-2 tracking-wide">
             A Farmasi é uma marca turca de renome mundial que oferece produtos
             de beleza e bem-estar de alta qualidade. Nossos produtos são
             formulados com ingredientes naturais cuidadosamente selecionados
@@ -64,18 +64,18 @@
         </div>
         <!-- cards -->
         <div
-          class="pt-5 gap-5 flex flex-col md:flex-row justify-center mx-10 lg:mx-40 xl:w-1/2 xl:mx-auto"
+          class="pt-5 gap-3 flex flex-col md:flex-row justify-center mx-3 lg:mx-40 xl:w-1/2 xl:mx-auto"
         >
           <!-- plano de carreira -->
           <div
             class="flex flex-1 flex-col justify-center p-5 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
           >
             <img
-              class="w-32 h-32 self-center"
+              class="w-28 h-28 md:w-32 md:h-32 self-center"
               src="images/career.svg"
               alt="carreira"
             />
-            <h2 class="text-xl font-bold text-gray-800 py-2">
+            <h2 class="text-xl font-bold text-[#fe5b68] py-2">
               Plano de Carreira
             </h2>
             <p>
@@ -88,11 +88,11 @@
             class="flex flex-1 flex-col justify-center p-5 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
           >
             <img
-              class="w-32 h-32 self-center"
+              class="w-28 h-28 md:w-32 md:h-32 self-center"
               src="images/quality.svg"
               alt="qualidade"
             />
-            <h2 class="text-xl font-bold text-gray-800 py-2">
+            <h2 class="text-xl font-bold text-[#fe5b68] py-2">
               Qualidade Europeia
             </h2>
             <p>
@@ -105,11 +105,11 @@
             class="flex flex-1 flex-col justify-center p-5 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
           >
             <img
-              class="w-32 h-32 self-center"
+              class="w-28 h-28 md:w-32 md:h-32 self-center"
               src="images/oportunidade.svg"
               alt="oportunidade"
             />
-            <h2 class="text-xl font-bold text-gray-800 py-2">
+            <h2 class="text-xl font-bold text-[#fe5b68] py-2">
               Oportunidade Global
             </h2>
             <p>
