--- a/index.html
+++ b/index.html
@@ -9,29 +9,34 @@
   <body class="p-0">
     <div class="w-full">
       <picture class="flex justify-center h-20 mt-5 mb-3">
-        <!-- <source media="(max-width: 600px)" srcset="images/microsoft.png" /> -->
         <img src="images/logo.png" alt="logo" />
       </picture>
       <!-- saiba mais -->
-      <div class="bg-[#fe5b68] px-4 pb-8">
-        <div class="flex flex-col lg:mx-48 text-center text-gray-50">
+      <div
+        class="flex flex-col gap-3 px-8 pb-8 md:px-32 md:gap-0 md:flex-row bg-[#fe5b68]"
+      >
+        <div
+          class="flex flex-col text-center md:justify-center flex-1 gap-5 text-gray-50"
+        >
           <p class="text-2xl md:text-3xl italic mt-6">
             Pré-Lançamento da <span class="font-bold">Farmasi Brasil</span>
           </p>
-          <p class="text-2xl md:text-4xl md:mx-4 my-5">
+          <p class="text-2xl">
             Comece Hoje uma mudança em seu Bem-Estar com a
             <span class="font-bold">Farmasi</span>
           </p>
           <p class="text-3xl tracking-wide md:text-5xl font-extrabold">
             Sua Nova Vida Começa Agora!
           </p>
-          <p
-            class="text-xl my-5 mx-2 md:mx-13 lg:mx-26 xl:mx-48 2xl:mx-96 italic"
-          >
+          <p class="text-xl italic">
             Gere renda extra e alcance liberdade financeira empreendendo em
             tempo parcial e sem risco, dentro da nossa equipe e com toda
             mentoria e suporte!
           </p>
+        </div>
+        <div
+          class="flex flex-col justify-center flex-1 md:flex-2 order-last md:order-first text-center"
+        >
           <picture class="md:flex justify-center hidden">
             <img
               class="w-96 h-96"
@@ -39,13 +44,11 @@
               alt="farmasi brasil"
             />
           </picture>
-          <div class="mt-5">
-            <a
-              class="uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-white text-[#fe5b68]"
-              href="#"
-              >Quero saber mais</a
-            >
-          </div>
+          <a
+            class="self-center uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-white text-[#fe5b68]"
+            href="#"
+            >Quero saber mais</a
+          >
         </div>
       </div>
       <!-- gigante está chegando -->
@@ -105,7 +108,7 @@
             class="flex flex-1 flex-col justify-center p-5 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
           >
             <img
-              class="w-28 h-28 md:w-32 md:h-32 self-center"
+              class="w-28 h-28 self-center"
               src="images/oportunidade.svg"
               alt="oportunidade"
             />
@@ -117,6 +120,83 @@
               países. Objetivo traçado para ser a empresa Número 1 no mundo!
             </p>
           </div>
+        </div>
+      </div>
+      <!-- conheça a farmasi -->
+      <div class="p-8 mx-10 lg:mx-36 xl:w-1/2 xl:mx-auto text-center">
+        <h3 class="text-2xl font-extralight my-2">
+          Faça parte da nossa equipe
+        </h3>
+        <h2 class="text-5xl font-bold my-2">Conheça a Farmasi</h2>
+        <p class="my-4">
+          A <span class="font-extrabold tracking-widest">Farmasi</span> é uma
+          marca turca de renome mundial, oferecendo oportunidades de negócios
+          para aqueles que desejam se juntar a nós como consultores. Se você é
+          apaixonado por beleza, empreendedorismo e está em busca de uma
+          carreira gratificante, saiba que estamos aqui para apoiá-lo em sua
+          jornada.
+        </p>
+        <div class="w-[560px] h-[315px] mx-auto mt-5 mb-8">
+          <iframe
+            width="100%"
+            height="100%"
+            src="https://www.youtube.com/embed/aT5I5ljew2I?si=DCsl8tBFPMWC7Kfq"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <a
+          class="uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-[#fe5b68] text-white"
+          href="#"
+          >Quero fazer parte</a
+        >
+      </div>
+      <!-- melhores categorias -->
+      <div class="px-12 pb-10">
+        <div class="flex gap-3 flex-col justify-center text-center">
+          <h1 class="text-4xl">
+            A <span>Farmasi</span> tem as melhores categorias de produtos em
+            nível mundial!
+          </h1>
+          <div class="flex gap-5">
+            <div class="flex flex-col flex-1">
+              <img src="images/pele.jpg" alt="cuidados com a pele" />
+              <h3 class="text-[#fe5b68] text-xl font-bold">
+                Cuidados com a pele
+              </h3>
+            </div>
+            <div class="flex flex-col flex-1">
+              <img src="images/maquiagem.jpg" alt="cuidados com a pele" />
+              <h3 class="text-[#fe5b68] text-xl font-bold">
+                Cuidados com a pele
+              </h3>
+            </div>
+            <div class="flex flex-col flex-1">
+              <img src="images/nutricao.jpg" alt="cuidados com a pele" />
+              <h3 class="text-[#fe5b68] text-xl font-bold">
+                Cuidados com a pele
+              </h3>
+            </div>
+            <div class="flex flex-col flex-1">
+              <img src="images/bemestar.jpg" alt="cuidados com a pele" />
+              <h3 class="text-[#fe5b68] text-xl font-bold">
+                Cuidados com a pele
+              </h3>
+            </div>
+            <div class="flex flex-col flex-1">
+              <img src="images/perfumaria.jpg" alt="cuidados com a pele" />
+              <h3 class="text-[#fe5b68] text-xl font-bold">
+                Cuidados com a pele
+              </h3>
+            </div>
+          </div>
+          <a
+            class="self-center uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-[#fe5b68] text-white"
+            href="#"
+            >Quero fazer parte</a
+          >
         </div>
       </div>
     </div>
