ajuste na largura do layout

--- a/index.html
+++ b/index.html
@@ -6,54 +6,52 @@
     <title>Sueunir - Consultora Farmasi</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="p-0">
-    <div class="w-full">
-      <picture class="flex justify-center h-20 mt-5 mb-3">
-        <img src="images/logo.png" alt="logo" />
-      </picture>
-      <!-- saiba mais -->
-      <div
-        class="flex flex-col gap-3 px-8 pb-8 md:px-32 md:gap-0 md:flex-row bg-[#fe5b68]"
-      >
-        <div
-          class="flex flex-col text-center md:justify-center flex-1 gap-5 text-gray-50"
-        >
-          <p class="text-2xl md:text-3xl italic mt-6">
-            Pré-Lançamento da <span class="font-bold">Farmasi Brasil</span>
-          </p>
-          <p class="text-2xl">
-            Comece Hoje uma mudança em seu Bem-Estar com a
-            <span class="font-bold">Farmasi</span>
-          </p>
-          <p class="text-3xl tracking-wide md:text-5xl font-extrabold">
-            Sua Nova Vida Começa Agora!
-          </p>
-          <p class="text-xl italic">
-            Gere renda extra e alcance liberdade financeira empreendendo em
-            tempo parcial e sem risco, dentro da nossa equipe e com toda
-            mentoria e suporte!
-          </p>
-        </div>
-        <div
-          class="flex flex-col justify-center flex-1 md:flex-2 order-last md:order-first text-center"
-        >
-          <picture class="md:flex justify-center hidden">
-            <img
-              class="w-96 h-96"
-              src="images/farmasi-brasil.jpeg"
-              alt="farmasi brasil"
-            />
-          </picture>
-          <a
-            class="self-center uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-white text-[#fe5b68]"
-            href="#"
-            >Quero saber mais</a
+  <body>
+    <header>
+      <div class="max-w-5xl mx-auto">
+        <picture class="flex justify-center h-20 mt-5 mb-3">
+          <img src="images/logo.png" alt="logo" />
+        </picture>
+      </div>
+    </header>
+    <section class="bg-[#fe5b68] pb-5">
+      <div class="max-w-5xl mx-auto">
+        <div class="flex flex-col justify-between md:flex-row">
+          <div class="flex flex-col">
+            <picture class="flex flex-col md:flex justify-center">
+              <img src="images/farmasi-brasil.jpeg" alt="farmasi brasil" />
+            </picture>
+            <a
+              class="self-center uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-white text-[#fe5b68]"
+              href="#"
+              >Quero saber mais</a
+            >
+          </div>
+          <div
+            class="flex flex-col text-center justify-center gap-5 text-gray-50"
           >
+            <p class="text-2xl md:text-3xl italic mt-6">
+              Pré-Lançamento da <span class="font-bold">Farmasi Brasil</span>
+            </p>
+            <p class="text-2xl">
+              Comece Hoje uma mudança em seu Bem-Estar com a
+              <span class="font-bold">Farmasi</span>
+            </p>
+            <p class="text-3xl tracking-wide md:text-5xl font-extrabold">
+              Sua Nova Vida Começa Agora!
+            </p>
+            <p class="text-xl italic">
+              Gere renda extra e alcance liberdade financeira empreendendo em
+              tempo parcial e sem risco, dentro da nossa equipe e com toda
+              mentoria e suporte!
+            </p>
+          </div>
         </div>
       </div>
-      <!-- gigante está chegando -->
-      <div class="bg-gray-200 pb-10">
-        <div class="pt-8 mx-10 lg:mx-36 xl:w-1/2 xl:mx-auto text-center">
+    </section>
+    <main class="bg-gray-200 pb-5">
+      <div class="max-w-5xl mx-auto">
+        <div class="pt-8 text-center">
           <h1 class="text-3xl xl:text-5xl font-bold text-gray-700">
             A Gigante Europeia Está Chegando ao Brasil
           </h1>
@@ -65,10 +63,7 @@
             e corpo!
           </p>
         </div>
-        <!-- cards -->
-        <div
-          class="pt-5 gap-3 flex flex-col md:flex-row justify-center mx-3 lg:mx-40 xl:w-1/2 xl:mx-auto"
-        >
+        <div class="pt-5 gap-3 flex flex-col md:flex-row justify-center">
           <!-- plano de carreira -->
           <div
             class="flex flex-1 flex-col justify-center p-5 text-center shadow-md border-2 border-white rounded-md bg-gray-100"
@@ -122,83 +117,81 @@
           </div>
         </div>
       </div>
-      <!-- conheça a farmasi -->
-      <div class="p-8 mx-10 lg:mx-36 xl:w-1/2 xl:mx-auto text-center">
-        <h3 class="text-2xl font-extralight my-2">
-          Faça parte da nossa equipe
-        </h3>
-        <h2 class="text-5xl font-bold my-2">Conheça a Farmasi</h2>
-        <p class="my-4">
-          A <span class="font-extrabold tracking-widest">Farmasi</span> é uma
-          marca turca de renome mundial, oferecendo oportunidades de negócios
-          para aqueles que desejam se juntar a nós como consultores. Se você é
-          apaixonado por beleza, empreendedorismo e está em busca de uma
-          carreira gratificante, saiba que estamos aqui para apoiá-lo em sua
-          jornada.
-        </p>
-        <div class="w-[560px] h-[315px] mx-auto mt-5 mb-8">
-          <iframe
-            width="100%"
-            height="100%"
-            src="https://www.youtube.com/embed/aT5I5ljew2I?si=DCsl8tBFPMWC7Kfq"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-        </div>
-        <a
-          class="uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-[#fe5b68] text-white"
-          href="#"
-          >Quero fazer parte</a
-        >
-      </div>
-      <!-- melhores categorias -->
-      <div class="px-12 pb-10">
-        <div class="flex gap-3 flex-col justify-center text-center">
-          <h1 class="text-4xl">
-            A <span>Farmasi</span> tem as melhores categorias de produtos em
-            nível mundial!
-          </h1>
-          <div class="flex gap-5">
-            <div class="flex flex-col flex-1">
-              <img src="images/pele.jpg" alt="cuidados com a pele" />
-              <h3 class="text-[#fe5b68] text-xl font-bold">
-                Cuidados com a pele
-              </h3>
-            </div>
-            <div class="flex flex-col flex-1">
-              <img src="images/maquiagem.jpg" alt="cuidados com a pele" />
-              <h3 class="text-[#fe5b68] text-xl font-bold">
-                Cuidados com a pele
-              </h3>
-            </div>
-            <div class="flex flex-col flex-1">
-              <img src="images/nutricao.jpg" alt="cuidados com a pele" />
-              <h3 class="text-[#fe5b68] text-xl font-bold">
-                Cuidados com a pele
-              </h3>
-            </div>
-            <div class="flex flex-col flex-1">
-              <img src="images/bemestar.jpg" alt="cuidados com a pele" />
-              <h3 class="text-[#fe5b68] text-xl font-bold">
-                Cuidados com a pele
-              </h3>
-            </div>
-            <div class="flex flex-col flex-1">
-              <img src="images/perfumaria.jpg" alt="cuidados com a pele" />
-              <h3 class="text-[#fe5b68] text-xl font-bold">
-                Cuidados com a pele
-              </h3>
-            </div>
+    </main>
+    <section class="pb-5">
+      <div class="max-w-5xl mx-auto">
+        <!-- conheça a farmasi -->
+        <div class="p-8 text-center">
+          <h3 class="text-2xl font-extralight my-2">
+            Faça parte da nossa equipe
+          </h3>
+          <h2 class="text-5xl font-bold my-2">Conheça a Farmasi</h2>
+          <p class="my-4">
+            A <span class="font-extrabold tracking-widest">Farmasi</span> é uma
+            marca turca de renome mundial, oferecendo oportunidades de negócios
+            para aqueles que desejam se juntar a nós como consultores. Se você é
+            apaixonado por beleza, empreendedorismo e está em busca de uma
+            carreira gratificante, saiba que estamos aqui para apoiá-lo em sua
+            jornada.
+          </p>
+          <div class="w-[560px] h-[315px] mx-auto mt-5 mb-8">
+            <iframe
+              width="100%"
+              height="100%"
+              src="https://www.youtube.com/embed/aT5I5ljew2I?si=DCsl8tBFPMWC7Kfq"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
           </div>
           <a
-            class="self-center uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-[#fe5b68] text-white"
+            class="uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-[#fe5b68] text-white"
             href="#"
             >Quero fazer parte</a
           >
         </div>
       </div>
-    </div>
+    </section>
+    <section class="mt-5">
+      <div class="max-w-5xl mx-auto">
+        <!-- melhores categorias -->
+        <div class="px-12 pb-10">
+          <div class="flex gap-3 flex-col justify-center text-center">
+            <h1 class="text-4xl">
+              A <span>Farmasi</span> tem as melhores categorias de produtos em
+              nível mundial!
+            </h1>
+            <div class="flex gap-5 mb-2">
+              <div class="flex flex-col flex-1">
+                <img src="images/pele.jpg" alt="cuidados com a pele" />
+                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+              </div>
+              <div class="flex flex-col flex-1">
+                <img src="images/maquiagem.jpg" alt="cuidados com a pele" />
+                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+              </div>
+              <div class="flex flex-col flex-1">
+                <img src="images/nutricao.jpg" alt="cuidados com a pele" />
+                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+              </div>
+              <div class="flex flex-col flex-1">
+                <img src="images/bemestar.jpg" alt="cuidados com a pele" />
+                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+              </div>
+              <div class="flex flex-col flex-1">
+                <img src="images/perfumaria.jpg" alt="cuidados com a pele" />
+                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+              </div>
+            </div>
+            <a
+              class="self-center uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-[#fe5b68] text-white"
+              href="#"
+              >Quero fazer parte</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
