nova seção pq me cadastrar agora

--- a/index.html
+++ b/index.html
@@ -162,26 +162,38 @@
               A <span>Farmasi</span> tem as melhores categorias de produtos em
               nível mundial!
             </h1>
-            <div class="flex gap-5 mb-2">
-              <div class="flex flex-col flex-1">
+            <div
+              class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-5 my-2"
+            >
+              <div class="flex gap-1 flex-col flex-1">
                 <img src="images/pele.jpg" alt="cuidados com a pele" />
-                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+                <h3 class="text-[#fe5b68] text-xl lg:text-sm font-bold">
+                  Cuidados com a pele
+                </h3>
               </div>
-              <div class="flex flex-col flex-1">
+              <div class="flex gap-1 flex-col flex-1">
                 <img src="images/maquiagem.jpg" alt="cuidados com a pele" />
-                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+                <h3 class="text-[#fe5b68] text-xl lg:text-sm font-bold">
+                  Cuidados com a pele
+                </h3>
               </div>
-              <div class="flex flex-col flex-1">
+              <div class="flex gap-1 flex-col flex-1">
                 <img src="images/nutricao.jpg" alt="cuidados com a pele" />
-                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+                <h3 class="text-[#fe5b68] text-xl lg:text-sm font-bold">
+                  Cuidados com a pele
+                </h3>
               </div>
-              <div class="flex flex-col flex-1">
+              <div class="flex gap-1 flex-col flex-1">
                 <img src="images/bemestar.jpg" alt="cuidados com a pele" />
-                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+                <h3 class="text-[#fe5b68] text-xl lg:text-sm font-bold">
+                  Cuidados com a pele
+                </h3>
               </div>
-              <div class="flex flex-col flex-1">
+              <div class="flex gap-1 flex-col flex-1">
                 <img src="images/perfumaria.jpg" alt="cuidados com a pele" />
-                <h3 class="text-[#fe5b68] font-bold">Cuidados com a pele</h3>
+                <h3 class="text-[#fe5b68] text-xl lg:text-sm font-bold">
+                  Cuidados com a pele
+                </h3>
               </div>
             </div>
             <a
@@ -189,6 +201,75 @@
               href="#"
               >Quero fazer parte</a
             >
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="bg-[#fe5b68] pb-5">
+      <div class="max-w-4xl mx-auto">
+        <h3 class="text-5xl text-white text-center py-5">
+          Por que me <span class="font-bold">cadastrar agora?</span>
+        </h3>
+        <div
+          class="grid gap-4 md:grid-cols-2 md:grid-rows-3 lg:grid-cols-3 lg:grid-rows-2 p-5"
+        >
+          <div class="flex flex-col gap-3 bg-white rounded-md text-center p-6">
+            <img
+              class="w-28 h-28 mx-auto"
+              src="images/empreendedorismo.png"
+              alt=""
+            />
+            <h3 class="text-xl font-bold">Empreendedorismo</h3>
+            <p>
+              Seja seu próprio chefe sem grandes investimentos, riscos e
+              burocracia.
+            </p>
+          </div>
+          <div class="flex flex-col gap-3 bg-white rounded-md text-center p-6">
+            <img
+              class="w-28 h-28 mx-auto"
+              src="images/pioneirismo.png"
+              alt=""
+            />
+            <h3 class="text-xl font-bold">Pioneirismo</h3>
+            <p>
+              Aproveite a oportunidade de ser um dos primeiros empreendedores da
+              empresa.
+            </p>
+          </div>
+          <div class="flex flex-col gap-3 bg-white rounded-md text-center p-6">
+            <img class="w-28 h-28 mx-auto" src="images/rede.png" alt="" />
+            <h3 class="text-xl font-bold">Rede</h3>
+            <p>
+              Você poderá expandir o seu mercado em rede, escalando seu negócio
+              e seus ganhos.
+            </p>
+          </div>
+          <div class="flex flex-col gap-3 bg-white rounded-md text-center p-6">
+            <img class="w-28 h-28 mx-auto" src="images/tecnologia.png" alt="" />
+            <h3 class="text-xl font-bold">Tecnologia de Ponta a Ponta</h3>
+            <p>
+              Desde a concepção dos produtos e serviços, até a experiência do
+              consumidor final.
+            </p>
+          </div>
+          <div class="flex flex-col gap-3 bg-white rounded-md text-center p-6">
+            <img class="w-28 h-28 mx-auto" src="images/renda.png" alt="" />
+            <h3 class="text-xl font-bold">
+              Renda Residual, Vitalícia e Hereditária
+            </h3>
+            <p>
+              Potencial construção de fonte de renda passiva, que passará por
+              gerações.
+            </p>
+          </div>
+          <div class="flex flex-col gap-3 bg-white rounded-md text-center p-6">
+            <img class="w-28 h-28 mx-auto" src="images/etica.png" alt="" />
+            <h3 class="text-xl font-bold">Ética</h3>
+            <p>
+              Valores e princípios sólidos e regras rígidas, para a construção
+              de um negócio valioso e longevo.
+            </p>
           </div>
         </div>
       </div>
