--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </picture>
             <a
               class="self-center uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-white text-[#fe5b68]"
-              href="#"
+              href="https://wa.me/5584988250040"
               >Quero saber mais</a
             >
           </div>
@@ -147,7 +147,7 @@
           </div>
           <a
             class="uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-[#fe5b68] text-white"
-            href="#"
+            href="https://br.farmasi.com/sueunirsoares/Register/BeautyInfluencer"
             >Quero fazer parte</a
           >
         </div>
@@ -198,7 +198,7 @@
             </div>
             <a
               class="self-center uppercase font-semibold tracking-widest rounded-full px-12 py-4 bg-[#fe5b68] text-white"
-              href="#"
+              href="https://br.farmasi.com/sueunirsoares/Register/BeautyInfluencer"
               >Quero fazer parte</a
             >
           </div>
